--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,75 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+            <style>
+                html{
+                    height: 100%;
+                }
+                body {
+                    background-color: #BFC9CC;
+                    height: 100%;
+                }
+                .container-lg{
+                    background-color: white;
+                    height: 100%;
+                }
+                #top{
+                    height:50px;
+                }
+                @media (min-width: 960px) {
+                    .collapse.dont-collapse-lg {
+                        display: block;
+                        height: auto !important;
+                        visibility: visible;
+                    }
+                }
+                @media (min-width: 960px) {
+                    .dont-show-lg {
+                        display: none;
+                    }
+                }
+                .gamb-line {
+                    width: 36px;
+                    height: 5px;
+                    background-color: #000;
+                    margin: 5px 0;
+                    transition: 0.3s;
+                }
+            </style>
+        {% block stylesheets %}
+        {% endblock %}
+        {% block javascripts %}
+            <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+            <script>
+                $(function () {
+                    $('.has_tooltip').tooltip();
+                })
+            </script>
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <div class="container-lg">
+            <div class="row">
+                <div class="col" id="top">
+                    <button class="btn btn-white mt-1 dont-show-lg has_tooltip" type="button" data-toggle="collapse" data-target="#left-panel" aria-expanded="false"
+                            aria-controls="left-panel" title="Меню" data-placement="right">
+                        <div class="gamb-line"></div>
+                        <div class="gamb-line"></div>
+                        <div class="gamb-line"></div>
+                    </button>
+                    {% block char_button %}{% endblock %}
+                </div>
+            </div>
+            <div class="row" id="main_container">
+                <div class="col collapse dont-collapse-lg" id="left-panel">Левая панель</div>
+                <div class="col" id="main-panel">{% block main_panel %}Главная панель{% endblock %}</div>
+                {% block char_panel %}{% endblock %}
+            </div>
+        </div>
     </body>
 </html>
