--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,7 @@
     <body>
         <div class="container-lg">
             <div class="row">
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
                 <div class="col" id="top">
                     <button class="btn btn-white mt-1 dont-show-lg has_tooltip" type="button" data-toggle="collapse" data-target="#left-panel" aria-expanded="false"
                             aria-controls="left-panel" title="Меню" data-placement="right">
@@ -65,9 +66,14 @@
                     </button>
                     {% block char_button %}{% endblock %}
                 </div>
+                {% endif %}
             </div>
             <div class="row" id="main_container">
-                <div class="col collapse dont-collapse-lg" id="left-panel">Левая панель</div>
+                {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                <div class="col collapse dont-collapse-lg" id="left-panel">
+                    <a href="/logout/">Выйти</a>
+                </div>
+                {% endif %}
                 <div class="col" id="main-panel">{% block main_panel %}Главная панель{% endblock %}</div>
                 {% block char_panel %}{% endblock %}
             </div>
