--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,15 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% form_theme registrationForm _self %}
+
+{% use 'form_div_layout.html.twig' with password_widget as base_password_widget %}
+{% use 'form_div_layout.html.twig' with email_widget as base_email_widget %}
+
+{% block email_widget %}
+    <div>
+        <label for="registration_form_email">Email</label>
+        {{ block('base_email_widget') }}
+    </div>
+{% endblock %}
+
+{% block password_widget %}
+    <div>
+        <label for="registration_form_plainPassword">Пароль</label>
+        {{ block('base_password_widget') }}
+    </div>
+{% endblock %}
+
+{% block title %}Регистрация{% endblock %}
 
 {% block main_panel %}
-    <h1>Register</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Регистрация</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_widget(registrationForm.email,{'attr':{'class':'form-control','autocomplete':'off'}}) }}
+        {{ form_widget(registrationForm.plainPassword,{'attr':{'class':'form-control','autocomplete':'off'}}) }}
 
-        <button class="btn">Register</button>
+        <button class="btn btn-lg btn-primary mt-3">Зарегистрироваться</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
