--- a/web/css/site.css
+++ b/web/css/site.css
@@ -148,3 +148,55 @@ body {
 ul {
     padding: 0;
 }
+
+#boxTags {
+    border: 1px solid #d3d3d3;
+    width: 500px;
+    padding: 10px 10px 0 10px;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+#boxTags #ulTags {
+    padding: 0;
+    margin: 0;
+}
+#boxTags #ulTags .li_tags {
+    border: 1px solid #e3e3e3;
+    background: #e3e3e3;
+    display: inline;
+    float: left;
+    list-style: none;
+    margin: 0 10px 10px 0;
+    padding: 0 3px 4px 5px;
+}
+#boxTags #ulTags .li_tags:hover {
+    border-color: #0099cc;
+}
+#boxTags #newTagInput {
+    display: inline;
+    float: left;
+    list-style: none;
+    margin: 0 10px 10px 0;
+    padding: 0 2px 2px 0;
+    width: 23px;
+}
+#boxTags .a_tag {
+    color: #000000;
+    text-decoration: none;
+    font-size: 12px;
+}
+#boxTags .a_tag:hover {
+    color: #000000;
+}
+#boxTags .del {
+    font-size: 12px;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 1px 4px 1px 4px;
+    background: #0099cc;
+    color: #ffffff;
+    position: relative;
+}
+#boxTags .del:hover {
+    background: #ff0000;
+}
