--- a/web/css/site.css
+++ b/web/css/site.css
@@ -149,13 +149,6 @@ ul {
     padding: 0;
 }
 
-#boxTags {
-    border: 1px solid #d3d3d3;
-    width: 500px;
-    padding: 10px 10px 0 10px;
-    margin: 0 auto;
-    margin-top: 10px;
-}
 #boxTags #ulTags {
     padding: 0;
     margin: 0;
@@ -178,7 +171,7 @@ ul {
     list-style: none;
     margin: 0 10px 10px 0;
     padding: 0 2px 2px 0;
-    width: 23px;
+    width: 100%;
 }
 #boxTags .a_tag {
     color: #000000;
@@ -199,4 +192,32 @@ ul {
 }
 #boxTags .del:hover {
     background: #ff0000;
+}
+
+.autocomplete {
+    position: absolute;
+    width: 100%;
+}
+
+.autocomplete-results {
+    padding: 0;
+    margin: 0;
+    border: 1px solid #eeeeee;
+    height: 120px;
+    overflow: auto;
+    width: 100%;
+    background-color: #e0e0e0;
+}
+
+.autocomplete-result {
+    list-style: none;
+    text-align: left;
+    padding: 4px 2px;
+    cursor: pointer;
+}
+
+.autocomplete-result.is-active,
+.autocomplete-result:hover {
+    background-color: #4aae9b;
+    color: white;
 }
